--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ignore-path .gitignore .",
+    "custom-script": "none ./script-test.js"
   },
   "dependencies": {
+    "@crello/react-lottie": "^0.0.11",
     "framer-motion": "^3.7.0",
     "lodash": "^4.17.20",
     "next": "latest",
@@ -25,7 +28,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "shelljs": "^0.8.4"
   },
   "license": "MIT"
 }
