--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start",
-    "lint": "eslint --ignore-path .gitignore .",
-    "custom-script": "node ./script-test.js"
+    "start": "next start"
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
