--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-styled-components",
+  "name": "instalura-base",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -33,12 +33,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.2",
+    "husky": "^5.1.3",
     "shelljs": "^0.8.4"
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn lint"
+      "pre-push": "yarn lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "license": "MIT",
