--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "react-dom": "^16.9.0",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.1.0",
     "babel-plugin-styled-components": "^1.8.0",
     "cypress": "^6.8.0",
     "cz-conventional-changelog": "3.3.0",
@@ -44,6 +48,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "4.3.8",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-styled-components": "^7.0.3",
     "shelljs": "^0.8.4"
   },
   "husky": {
